Simplifying layout to fix bugs on mobile

--- a/src/Pages/Aboutpage/About.css
+++ b/src/Pages/Aboutpage/About.css
@@ -32,18 +32,10 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  flex: 1 0 400px;
   width: 100%;
   justify-content: center;
   max-height: fit-content;
   max-width: fit-content;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex: 50%;
-  position: relative;
 }
 
 .abouttext {
